# ShareWords

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  TODO.md  build.jov.sh  compile_commands.json  start.sh  test.shareword
src/: main.cpp  word_finder.h
